[gd_scene load_steps=2 format=3 uid="uid://dmyakuqnducdt"]

[ext_resource type="Script" path="res://components/graph nodes/api/route.gd" id="1_tr62g"]

[node name="Route" type="GraphNode"]
title = "Route"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_tr62g")

[node name="SlotContainer0" type="HBoxContainer" parent="."]
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = 60

[node name="OutputLabel" type="Label" parent="SlotContainer0"]
layout_mode = 2
text = "output"

[node name="RouteLabel" type="Label" parent="SlotContainer0"]
layout_mode = 2
text = "route"

[node name="MethodPicker" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MethodLabel" type="Label" parent="MethodPicker"]
layout_mode = 2
text = "Method: "

[node name="MethodOptionButton" type="OptionButton" parent="MethodPicker"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "GET"
popup/item_1/text = "POST"
popup/item_1/id = 1

[node name="NameRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 18

[node name="NameLabel" type="Label" parent="NameRow"]
layout_mode = 2
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="NameRow"]
layout_mode = 2
size_flags_horizontal = 3
